--- a/project-b/package.json
+++ b/project-b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "better-sqlite3": "^11.6.0",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
